--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "impunity",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "js test runner that finds unit tests in any imported ES module",
   "main": "src/main.js",
   "scripts": {
-    "test": "./cmd.sh --entry-point example-project/a.js --force-esm"
+    "test": "./cmd.sh --entry-point example-project/a.js --force-esm-dirs example-project/"
   },
   "files": [
     "src/",
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "colors": "^1.3.3",
-    "commander": "^2.19.0"
+    "commander": "^6.1.0"
   },
   "bin": {
     "impunity": "cmd.sh"
