--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "MIT",
   "dependencies": {
     "colors": "^1.3.3",
-    "commander": "^6.1.0"
+    "commander": "^6.1.0",
+    "esbuild-node-loader": "^0.3.1"
   },
   "bin": {
     "impunity": "cmd.sh"
