--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "js test runner that finds unit tests in any imported ES module",
   "main": "src/main.js",
   "scripts": {
-    "test": "./cmd.sh --entry-point example-project/a.js --force-esm-dirs example-project/"
+    "test": "./cmd.js --entry-point example-project/a.js --force-esm-dirs example-project/"
   },
   "files": [
     "src/",
-    "cmd.sh"
+    "cmd.js"
   ],
   "author": "Bruno Windels <sendmeanything@fastmail.com>",
   "license": "MIT",
